--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>MOTORASER</title>
-  <link rel="stylesheet" href="./styles.css" />
+
+  <!-- ✅ CSS correto do seu repo + anti-cache -->
+  <link rel="stylesheet" href="./estilos.css?v=4" />
 </head>
 
 <body>
@@ -131,10 +133,10 @@
   <!-- FIREBASE (compat) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-  <!-- ✅ NOVO: FIRESTORE -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
-  <script src="./app.js"></script>
+  <!-- ✅ app.js com anti-cache -->
+  <script src="./app.js?v=4"></script>
 
   <!-- Google Maps -->
   <script
