--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MOTORASER</title>
 
   <!-- ✅ CSS padrão (depois de renomear estilos.css -> styles.css) -->
-  <link rel="stylesheet" href="./styles.css?v=10" />
+<link rel="stylesheet" href="./estilos.css?v=6" />
 </head>
 
 <body>
@@ -139,3 +139,4 @@
   ></script>
 </body>
 </html>
+
