--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MOTORASER</title>
 
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="./styles.css?v=9999">
 
 </head>
 <body>
@@ -58,3 +58,4 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGazx9bgxzM7oMboUSrEIVRDL
 
 </body>
 </html>
+
