--- a/index.html
+++ b/index.html
@@ -1,61 +1,138 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MOTORASER</title>
-
-<link rel="stylesheet" href="./styles.css?v=9999">
-
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>MOTORASER</title>
+  <link rel="stylesheet" href="./styles.css?v=1" />
 </head>
 <body>
+  <div class="app">
+    <header class="topbar">
+      <div class="brand">
+        <div class="logo">M</div>
+        <div class="brandText">
+          <div class="brandName">MOTORASER</div>
+          <div class="brandTag">Logística de corridas • simulador</div>
+        </div>
+      </div>
 
-<header class="topbar">
-<div class="brand">
-<div class="logo">M</div>
-<div>
-<div class="brandName">MOTORASER</div>
-<div class="brandTag">Logística de corridas • simulador</div>
-</div>
-</div>
+      <div class="topActions">
+        <button id="btnLogin" class="btn primary" type="button">Entrar com Google</button>
+        <button id="btnLogout" class="btn ghost hidden" type="button">Sair</button>
+        <button id="btnLocate" class="btn ghost" type="button">📍 Minha localização</button>
+      </div>
+    </header>
 
-<div class="actions">
-<button id="btnLogin" class="btn primary">Entrar com Google</button>
-<button id="btnLogout" class="btn hidden">Sair</button>
-<button id="btnLocate" class="btn">📍 Minha localização</button>
-</div>
-</header>
+    <main class="content">
+      <section class="card hero">
+        <div class="heroLeft">
+          <h1>Bem-vindo(a) 👋</h1>
+          <p class="muted">Perfil do usuário + localização + mapa real + botão de “Aposta Corrida”.</p>
 
-<div class="container">
+          <div class="row">
+            <div class="pill" id="locStatus">Localização: não carregada</div>
+            <div class="pill" id="userStatus">Usuário: visitante</div>
+          </div>
 
-<div class="card">
-<h2>Bem-vindo(a) 👋</h2>
-<p id="userStatus">Usuário: visitante</p>
+          <div id="userCard" class="userCard hidden">
+            <img id="userPhoto" class="userPhoto" alt="Foto do usuário" />
+            <div class="userInfo">
+              <div id="userName" class="userName">—</div>
+              <div id="userEmail" class="muted userEmail">—</div>
+            </div>
+          </div>
 
-<div id="map"></div>
+          <div class="ctaRow">
+            <button id="btnAposta" class="btn primary" type="button">🚗 APOSTA CORRIDA</button>
+            <button id="btnProfile" class="btn" type="button">👤 Perfil</button>
+          </div>
 
-<button id="btnAposta" class="btn primary">🚗 APOSTA CORRIDA</button>
-</div>
+          <p class="tiny muted">*Modo simulador (sem dinheiro real).</p>
+        </div>
 
-<div class="card">
-<h2>Corridas</h2>
-<div id="rides"></div>
-</div>
+        <div class="heroRight">
+          <div class="mapBox">
+            <div class="mapTop">
+              <div class="mapTitle">Sua área</div>
+              <div class="mapInfo" id="mapInfo">Toque em “Minha localização”.</div>
+            </div>
+            <div id="map"></div>
+          </div>
+        </div>
+      </section>
 
-</div>
+      <section class="grid">
+        <section class="card">
+          <div class="cardHead">
+            <div>
+              <h2>Corridas (simuladas)</h2>
+              <p class="muted">Uma lista “estilo 99” pra você evoluir depois.</p>
+            </div>
+            <button id="btnRefreshRides" class="btn ghost" type="button">🔄 Atualizar</button>
+          </div>
+          <div id="rides" class="rides"></div>
+        </section>
 
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+        <section class="card">
+          <h2>Seu perfil</h2>
+          <p class="muted">Nome + telefone (salva no navegador) e vincula ao seu login.</p>
 
-<script src="app.js"></script>
+          <form id="profileForm" class="form">
+            <label>
+              Nome
+              <input id="name" type="text" placeholder="Ex: Felipe" autocomplete="name" />
+            </label>
 
-<!-- Google Maps -->
-<script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGazx9bgxzM7oMboUSrEIVRDLepF9zB90&callback=initMap">
-</script>
+            <label>
+              Telefone
+              <input id="phone" type="tel" placeholder="Ex: (93) 9xxxx-xxxx" autocomplete="tel" />
+            </label>
 
+            <div class="formRow">
+              <button class="btn primary" type="submit">Salvar</button>
+              <button id="btnClear" class="btn ghost" type="button">Limpar</button>
+            </div>
+          </form>
+
+          <div class="note">
+            <div class="noteTitle">Dica</div>
+            <div class="muted">Depois a gente troca “simulador” por corridas reais no Firestore.</div>
+          </div>
+        </section>
+      </section>
+    </main>
+
+    <footer class="footer muted">
+      MOTORASER © <span id="year"></span> • Simulador
+    </footer>
+  </div>
+
+  <!-- Modal -->
+  <div id="modal" class="modal hidden" role="dialog" aria-modal="true">
+    <div class="modalCard">
+      <div class="modalHeader">
+        <div class="modalTitle" id="modalTitle">Aposta Corrida</div>
+        <button id="modalClose" class="btn ghost" type="button">✖</button>
+      </div>
+      <div id="modalBody" class="modalBody"></div>
+      <div class="modalActions">
+        <button id="modalOk" class="btn primary" type="button">OK</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Firebase compat -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+
+  <script src="./app.js?v=1"></script>
+
+  <!-- Google Maps -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGazx9bgxzM7oMboUSrEIVRDLepF9zB90&callback=initMap"
+    async defer
+  ></script>
 </body>
 </html>
-
