--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       </section>
 
       <section class="grid">
+        <!-- COLUNA ESQUERDA -->
         <section class="card">
           <div class="cardTop">
             <h2>Desafios ao vivo</h2>
@@ -78,8 +79,16 @@
           </div>
           <p class="muted">Abra um desafio, espere outro piloto aceitar e corram pro mesmo destino.</p>
           <div id="challenges" class="rides"></div>
+
+          <!-- ✅ ONLINE USERS (🟢) -->
+          <div class="card" style="margin-top:14px">
+            <h2>Online agora</h2>
+            <p class="muted">Quem está no app nesse momento</p>
+            <div id="onlineUsers" class="rides"></div>
+          </div>
         </section>
 
+        <!-- COLUNA DIREITA -->
         <section class="card">
           <h2>Meu perfil</h2>
           <p class="muted">Nome + telefone (salva no navegador e no Firebase quando logado).</p>
