--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>MOTORASER</title>
-
-  <!-- (opcional) favicon do navegador -->
-  <link rel="icon" href="./logo.png" />
-
-  <link rel="stylesheet" href="./styles.css?v=1" />
+  <link rel="stylesheet" href="./styles.css?v=2" />
 
   <!-- Leaflet (OpenStreetMap) -->
   <link
@@ -23,9 +19,9 @@
   <div class="app">
     <header class="topbar">
       <div class="brand">
-        <!-- ✅ LOGO COM IMAGEM (no lugar do M) -->
-        <div class="logo" aria-label="Logo Motoraser">
-          <img src="./logo.png" alt="Motoraser" />
+        <!-- ✅ LOGO AGORA É IMAGEM -->
+        <div class="logo">
+          <img src="./img/logo.png?v=2" alt="MOTORASER" />
         </div>
 
         <div class="brandText">
@@ -160,6 +156,6 @@
     crossorigin=""
   ></script>
 
-  <script src="./app.js?v=1"></script>
+  <script src="./app.js?v=2"></script>
 </body>
 </html>
