--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>MOTORASER</title>
-  <link rel="stylesheet" href="./styles.css?v=2" />
+  <link rel="stylesheet" href="./styles.css?v=1" />
 
   <!-- Leaflet (OpenStreetMap) -->
   <link
@@ -19,11 +19,7 @@
   <div class="app">
     <header class="topbar">
       <div class="brand">
-        <!-- ✅ LOGO AGORA É IMAGEM -->
-        <div class="logo">
-          <img src="./img/logo.png?v=2" alt="MOTORASER" />
-        </div>
-
+        <div class="logo">M</div>
         <div class="brandText">
           <div class="brandName">MOTORASER</div>
           <div class="brandTag">Aposta Corrida (simulador) • 1x1</div>
@@ -62,10 +58,16 @@
         </div>
 
         <div class="heroRight">
-          <div class="mapBox">
+          <div class="mapBox" id="mapBox">
             <div class="mapTop">
               <div class="mapTitle">Mapa</div>
-              <div class="mapInfo" id="mapInfo">Toque em “Minha localização”.</div>
+
+              <div class="mapTopRight">
+                <div class="mapInfo" id="mapInfo">Toque em “Minha localização”.</div>
+                <button id="btnMapFull" class="btn ghost tinyBtn" type="button" title="Tela cheia">
+                  ⛶ Tela cheia
+                </button>
+              </div>
             </div>
             <div id="map"></div>
           </div>
@@ -84,7 +86,7 @@
           <p class="muted">Abra um desafio, espere outro piloto aceitar e corram pro mesmo destino.</p>
           <div id="challenges" class="rides"></div>
 
-          <!-- ✅ ONLINE USERS (🟢) -->
+          <!-- ONLINE USERS -->
           <div class="card" style="margin-top:14px">
             <h2>Online agora</h2>
             <p class="muted">Quem está no app nesse momento</p>
@@ -117,8 +119,7 @@
           <div class="note">
             <div class="noteTitle">Como vence?</div>
             <div class="muted">
-              Quando a corrida começar, você aperta <b>CHEGUEI</b> ao estar perto do destino.
-              Quem registrar primeiro ganha.
+              Quando a corrida começar, você vence ao chegar no raio do destino.
             </div>
           </div>
         </section>
@@ -156,6 +157,6 @@
     crossorigin=""
   ></script>
 
-  <script src="./app.js?v=2"></script>
+  <script src="./app.js?v=1"></script>
 </body>
 </html>
