fix: rota automática ao selecionar destino

--- a/index.html
+++ b/index.html
@@ -165,5 +165,29 @@
 
   <!-- App -->
   <script src="./app.js?v=3"></script>
+  <!-- ================= RODAPÉ MOTORASER ================= -->
+<div id="motoraserFooter" style="
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: linear-gradient(90deg,#0f172a,#020617);
+  border-top: 1px solid rgba(0,255,255,.2);
+  padding: 8px 12px;
+  font-size: 12px;
+  text-align: center;
+  color: #cbd5e1;
+  z-index: 9999;
+  backdrop-filter: blur(6px);
+">
+
+  🚀 <b style="color:#22d3ee">MOTORASER</b> — Desafios de moto em tempo real  
+  <br>
+
+  👨‍💻 <b>Derick Fernando</b> — Desenvolvedor  
+  • 💡 <b>Kevin Wilhian</b> — Idealizador  
+
+</div>
+
 </body>
 </html>
